Added read license by key endpoint
